<resources>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account Register</string>
    <string name="remember_password">Remember Password</string>
    <string name="loginS">loginS</string>
</resources>
